fixed responsive alignment of circles

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -284,15 +284,6 @@ section.cyan {
 
   color: $white;
 
-  .cyan-container {
-    // width: 100%;
-    // padding-bottom: 25%;
-    // height: 0;
-
-    // background: url(../img/bg_bottom.svg);
-    // background-repeat: no-repeat;
-    // background-size: contain;
-  }
 
 }
 section.skills {
@@ -350,6 +341,8 @@ section.skills {
 
   .venn-diagram {
 
+    $circle-width: 28%;
+
     .container {
       position: relative;
       height: 0;
@@ -357,7 +350,7 @@ section.skills {
 
       svg {
         position: absolute;
-        width: 28%;
+        width: $circle-width;
         height: 100%;
         margin-left: 4%;
         @include transition-property(all);
@@ -365,7 +358,7 @@ section.skills {
         // @include transition-timing-function(ease-in);
 
         &#dev-circle {
-          bottom: -190px;
+          bottom: -$circle-width * 1.6;
           left: 22%;
         }
 
@@ -375,7 +368,7 @@ section.skills {
         }
 
         &#business-circle {
-          bottom: -190px;
+          bottom: -$circle-width * 1.6;
           left: 43%;
         }
 
